--- a/notebooks/07_load_daily_city_metrics/07_load_daily_city_metrics.ipynb
+++ b/notebooks/07_load_daily_city_metrics/07_load_daily_city_metrics.ipynb
@@ -5,12 +5,12 @@
    "name": "streamlit"
   },
   "lastEditStatus": {
-   "notebookId": "kss7vquztn5742emuo3m",
-   "authorId": "350843732387",
-   "authorName": "JOHN",
-   "authorEmail": "jeremiah.hansen@snowflake.com",
-   "sessionId": "d322f813-fe43-46ce-a12e-8f6586bfa9bf",
-   "lastEditTime": 1744841249680
+   "notebookId": "t5nmeij3lcmufijz7m3i",
+   "authorId": "8562791151366",
+   "authorName": "LILYLAVA",
+   "authorEmail": "laleh.avazpour@cat.com",
+   "sessionId": "1d86c70d-237e-4b7a-8ac3-339208cf1e92",
+   "lastEditTime": 1764958059636
   }
  },
  "nbformat_minor": 5,
@@ -108,7 +108,7 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": "SELECT * FROM DAILY_CITY_METRICS LIMIT 10;",
+   "source": "-- SELECT * FROM DAILY_CITY_METRICS LIMIT 10;",
    "execution_count": null
   }
  ]
